// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Failing manifest update - standalone view fields on existing views rejects a standalone view field claiming the pair the engine emits for the created field 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View field with same fieldMetadataUniversalIdentifier and viewUniversalIdentifier already exists",
              "userFriendlyMessage": "View field already exists",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 viewField",
    "summary": {
      "totalErrors": 1,
      "viewField": 1,
    },
    "userFriendlyMessage": "View field already exists",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Failing manifest update - standalone view fields on existing views rejects a standalone view field whose target view does not exist 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 viewField",
    "summary": {
      "totalErrors": 1,
      "viewField": 1,
    },
    "userFriendlyMessage": "View not found",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Failing manifest update - standalone view fields on existing views rejects two standalone view fields targeting the same field on the same view 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View field with same fieldMetadataUniversalIdentifier and viewUniversalIdentifier already exists",
              "userFriendlyMessage": "View field already exists",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View field with same fieldMetadataUniversalIdentifier and viewUniversalIdentifier already exists",
              "userFriendlyMessage": "View field already exists",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 2 viewFields",
    "summary": {
      "totalErrors": 2,
      "viewField": 2,
    },
    "userFriendlyMessage": "Many validation errors",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;
